[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-whaletracker"
version = "0.1.0"
description = "Real-time EVM whale transaction tracker with risk scoring and Redis publishing."
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9",
    "redis>=5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
whaletracker = "whaletracker.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
